# GitFlow

./: .coverage  .dockerignore  .gitignore  Dockerfile  GITFLOW_BUILD_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 147a729ba08a_initial_schema.py
src/gitflow/: config.py  config.yml  db.py  models.py
src/gitflow/analytics/: analytics_engine.py
src/gitflow/cli/: main.py
src/gitflow/cli/commands/: migration.py  report.py  setup.py  status.py
src/gitflow/dashboard/api/: auth.py  health.py  html_dashboard.py  limiter.py  main.py  schemas.py
src/gitflow/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/gitflow/dashboard/frontend/public/: index.html
src/gitflow/dashboard/frontend/src/: App.css  App.jsx  index.css
src/gitflow/dashboard/frontend/src/components/: Charts.css  Charts.jsx  Dashboard.jsx  Header.css  Header.jsx  RepositoryInfo.css  RepositoryInfo.jsx  StatsGrid.css  StatsGrid.jsx
src/gitflow/notifications/: notifier.py
src/gitflow/scheduler/: background_service.py
src/gitflow/scraper/: git_scraper.py
tests/: conftest.py  test_analytics_engine.py  test_api_hardening.py  test_auth.py  test_background_service.py  test_cli_commands.py  test_config.py  test_git_scraper.py  test_health_and_status.py  test_migration.py  test_notifications.py
